tests/error_messages/no_variants.stderr
error: Rotalubat requires at least one variant
 --> tests/error_messages/no_variants.rs:2:1
  |
2 | enum NeverEver {}
  | ^^^^^^^^^^^^^^^^^
