tests/error_messages/no_variants.rs
#[derive(rotalubat::Rotalubat, Debug, PartialEq)]
enum NeverEver {}

fn main() {}
